[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/jogador/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Status.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "anda"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "parado"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "pulo"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "queda"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 6.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 8 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
parede = NodePath("WallRay")
status = NodePath("Status")
sprite = NodePath("Sprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4
script = ExtResource( 4 )
animacao = NodePath("../AnimationPlayer")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="WallRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 5, 0 )

[node name="Status" type="Node" parent="."]
script = ExtResource( 3 )
jogador = NodePath("..")
tempo = NodePath("Timer")
tempo_revive = NodePath("Revive")
dano = NodePath("../Dano")
olha_colisao = NodePath("../OlhaColisao")
invensivel = NodePath("recupera")

[node name="Timer" type="Timer" parent="Status"]
wait_time = 6.0

[node name="Revive" type="Timer" parent="Status"]
wait_time = 2.0
one_shot = true

[node name="recupera" type="Timer" parent="Status"]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/anda = SubResource( 4 )
anims/parado = SubResource( 3 )
anims/pulo = SubResource( 5 )
anims/queda = SubResource( 6 )

[node name="Dano" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dano"]
position = Vector2( 0, 1.5 )
shape = SubResource( 7 )

[node name="OlhaColisao" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OlhaColisao"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[connection signal="timeout" from="Status/Timer" to="Status" method="_on_Timer_timeout"]
[connection signal="timeout" from="Status/Revive" to="Status" method="_on_Revive_timeout"]
[connection signal="timeout" from="Status/recupera" to="Status" method="_on_recupera_timeout"]
[connection signal="area_entered" from="Dano" to="." method="_on_Dano_area_entered"]
[connection signal="body_shape_entered" from="OlhaColisao" to="." method="_on_OlhaColisao_body_shape_entered"]
